# gamescope

./: .editorconfig  .gitmodules  LICENSE  README  README.md  default_scripts_install.sh  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
layer/: VkLayer_FROG_gamescope_wsi.cpp  VkLayer_FROG_gamescope_wsi.json  VkLayer_FROG_gamescope_wsi.json.in  color_helpers.h  meson.build  vulkan_operators.hpp  xcb_helpers.hpp
protocol/: gamescope-control.xml  gamescope-input-method.xml  gamescope-swapchain.xml  gamescope-xwayland.xml  meson.build
scripts/: README.md
scripts/00-gamescope/common/: inspect.lua  modegen.lua  util.lua
scripts/00-gamescope/displays/: asus.rogally.lcd.lua  deckhd.steamdeck.deckhd-lcd.lua  valve.steamdeck.lcd.lua  valve.steamdeck.oled.lua
src/: BufferMemo.cpp  BufferMemo.h  GamescopeVersion.h.in  InputEmulation.cpp  InputEmulation.h  Ratio.h  Timeline.cpp  Timeline.h  backend.cpp  backend.h  backends.h  color_bench.cpp  color_helpers.cpp  color_helpers.h  color_helpers_impl.h  color_tests.cpp  commit.cpp  commit.h  composite.comp  composite.comp.hlsl  config.c  convar.cpp  convar.h  cvt.cpp  cvt.hpp  defer.hpp  desktop.c  drm.c  drm.cpp  drm.h  drm.hpp  drm_include.h  edid.cpp  edid.h  gamescope_shared.h  gamescopectl.cpp  gamescopestream.cpp  glext.h  gpuvis_trace_utils.h  hdmi.h  (+63 more)
src/Apps/: gamescopectl.cpp  gamescopereaper.cpp  gamescopestream.cpp
src/Backends/: DRMBackend.cpp  HeadlessBackend.cpp  OpenVRBackend.cpp  SDLBackend.cpp  WaylandBackend.cpp
src/Script/: Script.cpp  Script.h
src/Utils/: Algorithm.h  Defer.h  Dict.h  NonCopyable.h  Process.cpp  Process.h  TempFiles.cpp  TempFiles.h  Version.cpp  Version.h
src/WaylandServer/: LinuxDrmSyncobj.h  Reshade.h  WaylandDecls.h  WaylandProtocol.h  WaylandResource.h  WaylandServerLegacy.h
src/shaders/: blit_push_data.h  blur.h  colorimetry.h  composite.h  cs_composite_blit.comp  cs_composite_blur.comp  cs_composite_blur_cond.comp  cs_composite_rcas.comp  cs_easu.comp  cs_easu_fp16.comp  cs_gaussian_blur_horizontal.comp  cs_nis.comp  cs_nis_fp16.comp  cs_rgb_to_nv12.comp  descriptor_set.h  descriptor_set_constants.h  heatmap.h  shaderfilter.h
subprojects/: .gitignore  glm.wrap  stb.wrap
subprojects/packagefiles/stb/: meson.build
